# serializer version: 1
# name: test_download_file_error
  '''
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting DOWNLOAD of feedback files
  Fetching file: RIAE_FS_00000000000000_FichierRetour.json
  Error while parsing file RIAE_FS_00000000000000_FichierRetour.json: ex=PermissionError(13, 'Permission denied')
  Will not delete file 'RIAE_FS_00000000000000_FichierRetour.json' because of errors.
  Successfully parsed 0/1 files
  Employee record notifications processing done!
  
  '''
# ---
# name: test_missing_environment_asp_sftp_host
  '''
  Your environment is missing ASP_SFTP_HOST to run this command.
  
  '''
# ---
# name: test_option_asp_test
  '''
  Using *TEST* JSON serializers (SIRET number mapping)
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting DOWNLOAD of feedback files
  Successfully parsed 0/0 files
  Employee record notifications processing done!
  
  '''
# ---
# name: test_preflight
  '''
  Preflight activated, checking for possible serialization errors...
  Found 3 object(s) to check, split in chunks of 700 objects.
  Checking file #1 (chunk of 3 objects)
  All serializations ok, you may skip preflight...
  
  '''
# ---
# name: test_preflight_with_error
  '''
  Preflight activated, checking for possible serialization errors...
  Found 1 object(s) to check, split in chunks of 700 objects.
  Checking file #1 (chunk of 1 objects)
  ERROR: serialization of EmployeeRecordUpdateNotification object (42) failed!
  > Got AttributeError when attempting to get a value for field `passDateDeb` on serializer `_PersonSerializer`.
  > The serializer field might be named incorrectly and not match any attribute or key on the `EmployeeRecord` instance.
  > Original exception text was: 'NoneType' object has no attribute 'start_at'.
  
  '''
# ---
# name: test_preflight_without_object
  '''
  Preflight activated, checking for possible serialization errors...
  No object to check. Exiting preflight.
  
  '''
# ---
# name: test_upload_and_download
  '''
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting UPLOAD of 1 notification(s)
  Successfully uploaded: RIAE_FS_20210927000000.json
  Employee record notifications processing done!
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting DOWNLOAD of feedback files
  Fetching file: RIAE_FS_20210927000000_FichierRetour.json
  Successfully processed 'RIAE_FS_20210927000000_FichierRetour.json', it can be deleted.
  Deleting 'RIAE_FS_20210927000000_FichierRetour.json' from SFTP server
  Successfully parsed 1/1 files
  Employee record notifications processing done!
  
  '''
# ---
# name: test_upload_file_error
  '''
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting UPLOAD of 1 notification(s)
  Could not upload file: RIAE_FS_20210927000000.json, reason: [Errno 2] No such file
  Could not upload file, exiting ...
  Employee record notifications processing done!
  
  '''
# ---
# name: test_upload_only_create_a_limited_number_of_files
  '''
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting UPLOAD of 2 notification(s)
  Successfully uploaded: RIAE_FS_20210927000000.json
  Employee record notifications processing done!
  
  '''
# ---
